--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gatsby-link": "^1.6.45",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-react-next": "^1.0.11",
-    "react-helmet": "^5.2.0"
+    "gatsby-plugin-styled-jsx": "^2.0.6",
+    "react-helmet": "^5.2.0",
+    "styled-jsx": "^2.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.53",
