--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js' '*.js'",
+    "format": "prettier --write 'src/**/*.js' 'src/**/*.jsx' '*.js'",
     "extract": "cross-env BABEL_ENV=extract lingui extract --clean"
   },
   "dependencies": {
