--- a/package.json
+++ b/package.json
@@ -12,27 +12,29 @@
     "extract": "cross-env BABEL_ENV=extract lingui extract --clean"
   },
   "dependencies": {
-    "@lingui/react": "^2.2.0",
+    "@lingui/react": "^2.7.2",
     "cross-env": "^5.2.0",
-    "gatsby": "^1.9.273",
-    "gatsby-link": "^1.6.45",
-    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby": "^2.0.91",
+    "gatsby-link": "^2.0.8",
+    "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-styled-jsx": "^2.0.6",
+    "gatsby-plugin-styled-jsx": "^3.0.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
-    "styled-jsx": "^2.2.7"
+    "styled-jsx": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.53",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.53",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.0.0-beta.53",
-    "@lingui/babel-preset-react": "^2.2.0",
-    "@lingui/cli": "^2.2.0",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@lingui/babel-preset-react": "^2.7.2",
+    "@lingui/cli": "^2.7.2",
+    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-remark": "^2.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.13.7"
+    "prettier": "^1.15.3"
   },
   "lingui": {
     "fallbackLocale": "de",
