--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@lingui/react": "^2.7.2",
+    "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "gatsby": "^2.0.91",
     "gatsby-link": "^2.0.8",
