--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "gatsby": "^2.0.91",
+    "gatsby-image": "^2.0.26",
     "gatsby-link": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-next": "^1.0.11",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-styled-jsx": "^3.0.3",
+    "gatsby-transformer-sharp": "^2.1.10",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
